--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "queensite-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
@@ -16,7 +17,9 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
+    "axios": "^0.24.0",
     "formik": "^2.2.9",
+    "http-proxy-middleware": "^2.0.1",
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -30,7 +33,9 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "react-start": "react-scripts start",
+    "json-server": "json-server --watch data/db.json --port 5000 --routes data/routes.json",
+    "start": "concurrently \"npm run react-start\" \"npm run json-server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -54,6 +59,8 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.15"
+    "@types/styled-components": "^5.1.15",
+    "concurrently": "^6.3.0",
+    "json-server": "^0.17.0"
   }
 }
